[package]
name = "networked_file_system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuser = "0.12"
time = "0.3"
libc = "0.2.176"
ssh2 = "0.9.5"
md5 = "0.8.0"
signal-hook = "0.3.18"

[[bin]]
name = "client"
path = "src/client/client_main.rs"

[[bin]]
name = "server"
path = "src/server/server_main.rs"
